{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "UI",
            "id": "5531244c-c8f3-470c-ac97-1ee0c6eb794d",
            "actions": [
                {
                    "name": "HoldAction",
                    "type": "Button",
                    "id": "66e3b947-9c0e-4bbf-804e-ec43924dd342",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CursorPosition",
                    "type": "Value",
                    "id": "71c1c15c-fd56-413d-82f4-96cfc054acfa",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ClickAction",
                    "type": "Button",
                    "id": "51f1f7a6-f5d0-4252-a6df-3640a4d3f2cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveToAction",
                    "type": "Button",
                    "id": "0483aab8-67e2-4f08-91ff-0ef1032a8e01",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveCameraAction",
                    "type": "Value",
                    "id": "ddd9a834-9bf2-4e55-a615-e489996aad34",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MultiSelectAction",
                    "type": "Button",
                    "id": "7aaf8c15-29f2-46ea-bd01-ad7250831970",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "58edf562-5e46-438f-bc5e-b425b897e104",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "MouseAndKeyboard",
                    "action": "HoldAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7cb2b303-86c7-45b0-9308-21bda520e9ee",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyboard",
                    "action": "CursorPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b6d2548-d005-475e-add1-7baa4db2a2d4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyboard",
                    "action": "ClickAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef9aee85-4ab7-4de2-b30f-fae46b4c9ac9",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyboard",
                    "action": "MoveToAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "1cd964f0-436d-4f71-bcc2-9335fdc796ee",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCameraAction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b6a92fe3-6acf-4e71-a17b-71a9486daf4d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyboard",
                    "action": "MoveCameraAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "da87192b-6f4b-4bbe-9402-c15e4ff8c6ad",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCameraAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d3d6ed18-22cc-4aad-b658-833b47c7090b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyboard",
                    "action": "MoveCameraAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0345eb9c-096a-492f-945d-0fe938b683df",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyboard",
                    "action": "MoveCameraAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6356007e-c4c7-41b8-93e5-e5646ded05f7",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyboard",
                    "action": "MultiSelectAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MouseAndKeyboard",
            "bindingGroup": "MouseAndKeyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}